--- a/landingstyles.css
+++ b/landingstyles.css
@@ -147,6 +147,7 @@ body {
   text-align: left;
   font-size: 0.95rem;
   line-height: 1.4;
+  font-family: 'Roboto', sans-serif;
 }
 .top-text {
   font-size: 1.5rem;
@@ -174,4 +175,41 @@ body {
 }
 .footer-buttons button:hover {
   background-color: var(--complimentary);
+}
+
+@media (max-width: 1168px){
+  .hero-container{
+   justify-content: center;
+   padding: 2rem 2rem;
+  }
+  .text-area{
+    align-items: center;
+    justify-content: center;
+  }
+  .text-area h1{
+    font-size: 5rem;
+    margin-bottom: -40px;
+  }
+  .info-blocks{
+    gap: 1rem;
+    align-items: center;
+    padding: 0.5rem 0.90rem;
+    margin-bottom: -20px;
+  }
+  .footer-buttons button {
+    padding: 0.650rem 1rem;
+    font-size: 0.80rem;
+    margin-bottom: 0px;
+    align-items: center;
+  }
+  .top-text{
+    font-size: 1rem;
+  }
+  .sub-text{
+    font-size: 0.80rem;
+  }
+}
+
+@media (max-width: 907px) {
+  
 }
