--- a/landingstyles.css
+++ b/landingstyles.css
@@ -3,6 +3,7 @@
       --secondary: #fdfffc;
       --complimentary: #ba181b;
       --neutral: #262224;
+      --accent: #38b000;
     }
 
 * {
@@ -36,14 +37,14 @@ body {
 }
 
 .logo-text {
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-weight: 600;
   color: var(--secondary);
   text-transform: uppercase;
 }
 
 .status-badge {
-  background: var(--complimentary);
+  background: var(--accent);
   color: white;
   font-size: 0.8rem;
   padding: 0.3rem 0.6rem;
@@ -79,9 +80,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
   text-align: center;
-  padding: 0 1rem;
+  padding: 1rem 1rem;
+  margin-bottom: 2rem;
 }
 
 .hero-img {
@@ -134,6 +135,7 @@ body {
   font-size: 2rem;
   margin-left: 12px;
   vertical-align: super;
+  color: var(--complimentary);
 }
 
 .info-blocks {
@@ -146,7 +148,7 @@ body {
   max-width: 250px;
   text-align: left;
   font-size: 0.95rem;
-  line-height: 1.4;
+  line-height: 1rem;
   font-family: 'Roboto', sans-serif;
 }
 .top-text {
@@ -154,6 +156,11 @@ body {
   font-weight: 600;
   display: inline-block;
   margin-bottom: 0.5rem;
+  font-family: 'Roboto', sans-serif;
+  color: var(--complimentary);
+}
+.info i{
+  color: var(--complimentary);
 }
 .footer-buttons {
   margin-top: .8rem;
@@ -176,6 +183,108 @@ body {
 .footer-buttons button:hover {
   background-color: var(--complimentary);
 }
+
+/* About Me section */
+.about-me-container{
+  padding: 1rem 5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.left-side{
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  max-width: 450px;
+  justify-content: center;
+}
+.top-left h2{
+  margin-top: -40px;
+  font-size: 2.5rem;
+  color: var(--secondary);
+}
+.bottom-left-icons{
+  display: flex;
+  gap: 0.50rem;
+  justify-content: end;
+}
+.left-side span{
+  color: var(--complimentary);
+  text-decoration: underline;
+}
+
+.bottom-left-icons i{
+  color: var(--secondary);
+  font-size: 1.7rem;
+}
+.socials-icon{
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: var(--neutral);
+  width: 50px;
+  height: 50px;
+  text-decoration: none;
+  overflow: hidden;
+  z-index: 0;
+}
+.socials-icon::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background-color: var(--complimentary);
+  border-radius: 50%;
+  z-index: -1;
+  transition: width 0.6s ease;
+}
+.socials-icon:hover::before{
+  width: 100%;
+}
+.socials-icon:hover{
+  color: var(--secondary);
+}
+.cta-cv{
+  display: flex;
+  justify-content: flex-end;
+}
+.cta-cv button{
+  background-color: var(--complimentary);
+  padding: 0.70rem 2rem;
+  border: none;
+  font-family: 'Roboto', sans-serif;
+  color: var(--secondary);
+  font-size: 1rem;
+  border-radius: 2px;
+  cursor: pointer;  
+}
+.right-side{
+  justify-content: center;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  max-width: 600px;
+  gap: .80rem;
+}
+.right-side p{
+  font-family: 'Roboto', sans-serif;
+  text-align: justify;
+  font-size: 1rem;
+  font-weight: 200;
+  opacity: 70%;
+}
+.right-side p span{
+  color: var(--complimentary);
+  opacity: 100%;
+}
+
+
+
+
 
 @media (max-width: 1168px){
   .hero-container{
