--- a/landingstyles.css
+++ b/landingstyles.css
@@ -45,10 +45,13 @@ body {
 
 .status-badge {
   background: var(--accent);
-  color: white;
+  color: var(--secondary);
   font-size: 0.8rem;
   padding: 0.3rem 0.6rem;
   border-radius: 12px;
+}
+.sb{
+  text-decoration: none;
 }
 
 .cta-bar {
@@ -325,7 +328,7 @@ body {
     margin-top: -30px;
     font-size: 2.5rem;
   }
-  .bottom-left-icons i{
+  .bottom-right-icons i{
     font-size: 1.3rem;
   }
   .socials-icon{
@@ -340,6 +343,17 @@ body {
   .right-side p{
     font-size: 0.90rem;
     line-height: 1.5;
+  }
+  .cta-bar{
+    padding: 6px 14px;
+    align-items: center;
+    justify-content: center;
+  }
+  .hmb-btn{
+    font-size: 1rem;
+  }
+  .about-me-container{
+    margin-top: -10px;
   }
 }
 
@@ -356,7 +370,7 @@ body {
   .text-area h1{
     font-size: 3rem;
   }
-  .text-area-h1::after{
+  .text-area h1::after{
     font-size: 1rem;
     margin-left: 6px;
   }
@@ -412,7 +426,103 @@ body {
   .bottom-right-icons{
     margin-top: -10px;
   }
+  .cta-bar{
+    padding: 4px 12px;
+    align-items: center;
+  }
+  .cta-bar h3{
+    font-size: 1rem;
+  }
 }
-@media (max-width: 682px) {
 
+
+@media (max-width: 682px) {
+  .info-blocks{
+    gap: 0rem;
+    display: flex;
+    flex-direction: column;
+  }
+  .top-text{
+    font-size: 0.80rem;
+    margin-bottom: -3px;
+  }
+  .info i{
+    font-size: 0.80rem;
+  }
+  .sub-text{
+    font-size: 0.80rem;
+  }
+  .about-me-container{
+    padding: 14rem 5rem;
+  }
+}
+
+@media (max-width: 444px){
+  .hero-container{
+    padding: 4rem 1rem;
+  }
+  .logo-text{
+    font-size: 0.80rem;
+  }
+  .status-badge{
+    padding: 0.2rem 0.5rem;
+    font-size: 0.80rem;
+    display: none;
+  }
+  .cta-bar{
+    padding: 2px 10px;
+  }
+  .cta-bar h3{
+    font-size: 0.80rem;
+  }
+  .hero-img img{
+    height: 400px;
+    margin-top: -90px;
+  }
+  .text-area{
+    margin-top: 450px;
+    padding: 2rem 1rem;
+  }
+  .text-area h1{
+    font-size: 2rem;
+  }
+  .text-area h1::after{
+    font-size: 1rem;
+  }
+  .about-me-container{
+    padding: 6rem 2rem;
+  }
+  .top-left h2{
+    font-size: 1.3rem ;
+  }
+  .right-side{
+    gap: 14px;
+    margin-top: -8px;
+  }
+  .right-side p{
+    font-size: 0.70rem;
+  }
+  .bottom-right-icons i{
+    font-size: 1rem;
+    align-items: center;
+  }
+  .socials-icon{
+    width: 30px;
+    height: 30px;
+  }
+  .cta-cv{
+    margin-top: -5px;
+  }
+  .cta-cv button{
+    padding: 0.40rem 0.80rem;
+    font-size: 0.60rem;
+  }
+}
+@media (max-width: 362px){
+  .hero-container{
+    padding: 2rem 0rem;
+  }
+  .about-me-container{
+    padding: 7rem 1rem;
+  }
 }
