--- a/landingstyles.css
+++ b/landingstyles.css
@@ -173,18 +173,33 @@ body {
   justify-content: center;
 }
 .footer-buttons button {
-  padding: 1rem 3rem;
+  position: relative;
+  padding: 1rem 2rem;
   border: none;
   border-radius: 4px;
-  background-color: #1e1e1e;
+  background-color: var(--neutral);
   color: var(--secondary);
   font-weight: 600;
   font-size: 0.95rem;
   cursor: pointer;
-  transition: background 0.3s ease;
+  overflow: hidden;
+  z-index: 1;
 }
-.footer-buttons button:hover {
-  background-color: var(--complimentary);
+.footer-buttons button::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 0%;
+  background-color: var(--complimentary); 
+  z-index: -1;
+  transition: height 0.9s ease;
+  border-radius: inherit;
+}
+
+.footer-buttons button:hover::before {
+  height: 100%;
 }
 
 /* About Me section */
@@ -205,6 +220,7 @@ body {
   margin-top: -40px;
   font-size: 2.5rem;
   color: var(--secondary);
+  font-family: 'Montserrat', sans-serif;
 }
 .bottom-right-icons{
   display: flex;
@@ -283,6 +299,75 @@ body {
 .right-side p span{
   color: var(--complimentary);
   opacity: 100%;
+}
+
+/*Works Section*/
+.works-container{
+  padding: 4rem 5rem;
+  display: flex;
+  flex-direction: column;
+}
+.works-header h2{
+  font-size: 2.5rem;
+  display: flex;
+  justify-content: center;
+}
+.cards-container{
+  padding-top: 2rem;
+}
+.works-cards {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 300px;
+  background: linear-gradient(to bottom, var(--complimentary), #262224);
+  overflow: hidden;
+  border: 1px solid; /* border width */
+  border-image: linear-gradient(135deg, var(--neutral), #ba181b) 1;
+}
+.card-img img{
+  width: 100%;
+  height: auto;
+  display: block;
+  object-fit: cover;
+}
+.project-name{
+  padding: 1rem 0.5rem 0 0.5rem; 
+}
+.project-name h3{
+  color: var(--secondary);
+  font-size: 1.3rem;
+  font-family: 'Roboto',sans-serif;
+}
+.project-details{
+  padding: 1rem 0.5rem 0 0.5rem;
+  font-size: 0.90rem;
+  color: var(--secondary);
+  font-family: 'Roboto', sans-serif;
+  opacity: 80%;
+  line-height: 1.3;
+}
+.cards-cta{
+  padding: 1rem 0.5rem;
+}
+.cards-cta a div{
+  background-color: var(--neutral); 
+  border: 1px solid var(--complimentary);
+  padding: 0.70rem;
+  border-radius: 3px;
+  color: var(--secondary);
+  font-size: 1rem;
+  font-family: 'Roboto', sans-serif;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
+.cards-cta a div:hover{
+  background-color: var(--complimentary-hover, #ba181b);
+}
+.cards-cta a{
+  text-decoration: none;
+  text-align: center;
 }
 
 
