--- a/landingstyles.css
+++ b/landingstyles.css
@@ -587,20 +587,20 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-size: 1rem;
 }
-/* Initial hidden state */
+
 .animate-on-scroll {
   opacity: 0;
   transform: translateY(40px);
   transition: opacity 0.6s ease, transform 0.6s ease;
 }
 
-/* When entering the viewport */
+
 .animate-in {
   opacity: 1 !important;
   transform: translateY(0) !important;
 }
 
-/* When leaving the viewport */
+
 .animate-out {
   opacity: 0 !important;
   transform: translateY(40px) !important;
@@ -613,7 +613,7 @@ body {
   left: 0;
   height: 100vh;
   width: 100vw;
-  background-color: var(--neutral); /* or any color you prefer */
+  background-color: var(--neutral); 
   z-index: 9999;
   display: flex;
   justify-content: start;
